--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,14 +13,19 @@
             android:id="@+id/action_loginFragment_to_registrationFragment"
             app:destination="@id/registrationFragment" />
         <action
-            android:id="@+id/action_loginFragment_to_mainMenuFragment"
+            android:id="@+id/action_loginFragment_to_homeFragment"
             app:destination="@id/homeScreenFragment" />
     </fragment>
     <fragment
         android:id="@+id/registrationFragment"
         android:name="piotr.michalkiewicz.mealplannerclient.view.login.RegistrationFragment"
         android:label="fragment_registration"
-        tools:layout="@layout/fragment_registration" />
+        tools:layout="@layout/fragment_registration">
+        <action
+            android:id="@+id/action_registrationFragment_pop"
+            app:popUpTo="@id/registrationFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
 
     <fragment
         android:id="@+id/homeScreenFragment"
