Nutrition screen ViewPager implemented

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -44,6 +44,6 @@
         tools:layout="@layout/fragment_shopping_list" />
     <fragment
         android:id="@+id/nutritionScreenFragment"
-        android:name="piotr.michalkiewicz.mealplannerclient.view.menu.fragments.NutritionScreenFragment"
+        android:name="piotr.michalkiewicz.mealplannerclient.view.menu.fragments.nutrition.NutritionScreenFragment"
         android:label="NutritionScreenFragment" />
 </navigation>
