--- a/app/src/main/res/drawable/selected_tab_dot.xml
+++ b/app/src/main/res/drawable/selected_tab_dot.xml
@@ -6,7 +6,7 @@
             android:shape="ring"
             android:thickness="6dp"
             android:useLevel="false">
-            <solid android:color="@color/darkGrey" />
+            <solid android:color="@color/selected_dot_color" />
         </shape>
     </item>
 </layer-list>
