--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -64,6 +64,11 @@
         <item name="android:textSize">11sp</item>
     </style>
 
+    <style name="smallBoldText">
+        <item name="android:textSize">11sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="recipeListElement">
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
