Added progress bars styles

--- a/app/src/main/res/layout/fragment_nutrition_general_tab.xml
+++ b/app/src/main/res/layout/fragment_nutrition_general_tab.xml
@@ -20,10 +20,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="- 327 kcal"
-        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
+        app:layout_constraintBottom_toBottomOf="@+id/allTargetsProgressBar"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/progressBar" />
+        app:layout_constraintTop_toTopOf="@+id/allTargetsProgressBar" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
@@ -33,7 +33,7 @@
         app:layout_constraintGuide_percent="0.5" />
 
     <ProgressBar
-        android:id="@+id/progressBar"
+        android:id="@+id/allTargetsProgressBar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="80dp"
         android:layout_height="80dp"
@@ -53,10 +53,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="62%"
-        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
-        app:layout_constraintEnd_toEndOf="@+id/progressBar"
-        app:layout_constraintStart_toStartOf="@+id/progressBar"
-        app:layout_constraintTop_toTopOf="@+id/progressBar" />
+        app:layout_constraintBottom_toBottomOf="@+id/allTargetsProgressBar"
+        app:layout_constraintEnd_toEndOf="@+id/allTargetsProgressBar"
+        app:layout_constraintStart_toStartOf="@+id/allTargetsProgressBar"
+        app:layout_constraintTop_toTopOf="@+id/allTargetsProgressBar" />
 
     <TextView
         android:id="@+id/textView19"
@@ -65,9 +65,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:text="@string/all_targets"
-        app:layout_constraintEnd_toEndOf="@+id/progressBar"
-        app:layout_constraintStart_toStartOf="@+id/progressBar"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+        app:layout_constraintEnd_toEndOf="@+id/allTargetsProgressBar"
+        app:layout_constraintStart_toStartOf="@+id/allTargetsProgressBar"
+        app:layout_constraintTop_toBottomOf="@+id/allTargetsProgressBar" />
 
     <View
         android:id="@+id/horizontalBorder"
@@ -91,7 +91,7 @@
 
     <ProgressBar
         android:id="@+id/energyProgressBar"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        style="@style/myHorizontalProgressBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -122,6 +122,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="2dp"
+        android:progressDrawable="@drawable/protein_horizontal_progress_bar"
         android:layout_marginEnd="16dp"
         android:indeterminate="false"
         android:max="100"
@@ -148,6 +149,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="2dp"
+        android:progressDrawable="@drawable/carbohydrates_horizontal_progress_bar"
         android:layout_marginEnd="16dp"
         android:indeterminate="false"
         android:max="100"
@@ -163,7 +165,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="@string/protein"
+        android:text="@string/carbohydrates"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/proteinProgressBar" />
 
@@ -176,6 +178,7 @@
         android:layout_marginTop="2dp"
         android:layout_marginEnd="16dp"
         android:indeterminate="false"
+        android:progressDrawable="@drawable/fat_horizontal_progress_bar"
         android:max="100"
         android:progress="8"
         app:layout_constraintEnd_toEndOf="parent"
@@ -189,7 +192,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="@string/protein"
+        android:text="@string/fat"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/carbohydratesProgressBar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
