--- a/app/src/main/res/layout/fragment_nutrition_vitamin_targets_tab.xml
+++ b/app/src/main/res/layout/fragment_nutrition_vitamin_targets_tab.xml
@@ -25,7 +25,7 @@
 
     <ProgressBar
         android:id="@+id/vitAProgressBar"
-        style="?android:attr/progressBarStyleHorizontal"
+        style="@style/myHorizontalProgressBarStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -49,7 +49,7 @@
 
     <ProgressBar
         android:id="@+id/vitCProgressBar"
-        style="?android:attr/progressBarStyleHorizontal"
+        style="@style/myHorizontalProgressBarStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -73,7 +73,7 @@
 
     <ProgressBar
         android:id="@+id/vitDProgressBar"
-        style="?android:attr/progressBarStyleHorizontal"
+        style="@style/myHorizontalProgressBarStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -97,7 +97,7 @@
 
     <ProgressBar
         android:id="@+id/vitEProgressBar"
-        style="?android:attr/progressBarStyleHorizontal"
+        style="@style/myHorizontalProgressBarStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -121,7 +121,7 @@
 
     <ProgressBar
         android:id="@+id/vitKProgressBar"
-        style="?android:attr/progressBarStyleHorizontal"
+        style="@style/myHorizontalProgressBarStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -145,7 +145,7 @@
 
     <ProgressBar
         android:id="@+id/foliateProgressBar"
-        style="?android:attr/progressBarStyleHorizontal"
+        style="@style/myHorizontalProgressBarStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -169,7 +169,7 @@
 
     <ProgressBar
         android:id="@+id/vitB1ProgressBar"
-        style="?android:attr/progressBarStyleHorizontal"
+        style="@style/myHorizontalProgressBarStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -193,7 +193,7 @@
 
     <ProgressBar
         android:id="@+id/vitB2ProgressBar"
-        style="?android:attr/progressBarStyleHorizontal"
+        style="@style/myHorizontalProgressBarStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -217,7 +217,7 @@
 
     <ProgressBar
         android:id="@+id/vitB3ProgressBar"
-        style="?android:attr/progressBarStyleHorizontal"
+        style="@style/myHorizontalProgressBarStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -241,7 +241,7 @@
 
     <ProgressBar
         android:id="@+id/vitB5ProgressBar"
-        style="?android:attr/progressBarStyleHorizontal"
+        style="@style/myHorizontalProgressBarStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -265,7 +265,7 @@
 
     <ProgressBar
         android:id="@+id/vitB6ProgressBar"
-        style="?android:attr/progressBarStyleHorizontal"
+        style="@style/myHorizontalProgressBarStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -289,7 +289,7 @@
 
     <ProgressBar
         android:id="@+id/vitB12ProgressBar"
-        style="?android:attr/progressBarStyleHorizontal"
+        style="@style/myHorizontalProgressBarStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
