Added pepper background

--- a/app/src/main/res/layout/fragment_nutrition_screen.xml
+++ b/app/src/main/res/layout/fragment_nutrition_screen.xml
@@ -52,10 +52,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        app:tabIndicatorColor="@color/white"
-        app:tabTextColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+        app:tabIndicatorColor="@color/white"
+        app:tabTextColor="@color/white">
 
     </com.google.android.material.tabs.TabLayout>
 
