--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,7 @@
     <style name="bigPlainText">
         <item name="android:textSize">24sp</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="RecipeTitle">
@@ -34,6 +35,7 @@
 
     <style name="listElementText">
         <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="hyperlink">
@@ -43,11 +45,13 @@
 
     <style name="normalText">
         <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="normalTextBold">
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="recipeAbout">
@@ -60,12 +64,20 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="medium_bold_text">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="smallText">
         <item name="android:textSize">11sp</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="smallBoldText">
         <item name="android:textSize">11sp</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textStyle">bold</item>
     </style>
 
@@ -82,6 +94,7 @@
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:padding">10dp</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
 
@@ -93,6 +106,7 @@
     <style name="recipe_thumbnail_text">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">20sp</item>
+
     </style>
 
     <style name="search_icon_top_label">
