--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,13 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@mipmap/peppers1">
+        android:layout_height="match_parent">
+<!--        android:background="@mipmap/peppers1"-->
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/opaqueBlack" />
+            android:layout_height="match_parent" />
+<!--            android:background="@color/opaqueBlack"-->
 
         <androidx.drawerlayout.widget.DrawerLayout xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/drawerLayout"
