Add changes form Cieniu change activity to main context and create classes to Toast with main context

--- a/app/src/main/res/layout/content_start_customization.xml
+++ b/app/src/main/res/layout/content_start_customization.xml
@@ -52,8 +52,18 @@
         android:id="@+id/skipCustomizationBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="33dp"
         android:text="@string/skip_customization"
+        app:layout_constraintBottom_toTopOf="@+id/putAwayCustomizationBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+<Button
+        android:id="@+id/putAwayCustomizationBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
+        android:text="@string/do_it_later"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
