--- a/app/src/main/res/layout/fragment_cuisine_customization.xml
+++ b/app/src/main/res/layout/fragment_cuisine_customization.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".view.personalization.fragments.CuisineCustomizationFragment">
+    tools:context=".view.personalization.fragments.CuisineCustomizationFragmentPersonalizationCustom">
     <TextView
         android:id="@+id/textView15"
         style="@style/listElementText"
@@ -56,7 +56,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/confirmButton"
+        android:id="@+id/confirmBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="45dp"
