--- a/app/src/main/res/layout/fragment_meals_number_customization.xml
+++ b/app/src/main/res/layout/fragment_meals_number_customization.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".view.personalization.fragments.MealsNumberCustomizationPersonalizationFragment">
+    tools:context=".view.personalization.fragments.MealsNumberCustomizationPersonalizationCustomFragment">
 
 
     <TextView
@@ -175,13 +175,16 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/confirmButton"
+        android:id="@+id/confirmBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="134dp"
         android:layout_marginBottom="16dp"
         android:text="@string/next"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mealPerPlanLayout"
+        app:layout_constraintVertical_bias="0.78" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
