--- a/app/src/main/res/layout/fragment_recipe_type_customization.xml
+++ b/app/src/main/res/layout/fragment_recipe_type_customization.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".view.personalization.fragments.RecipeTypeCustomizationPersonalizationFragment">
+    tools:context=".view.personalization.fragments.RecipeTypeCustomizationPersonalizationCustomFragment">
 
     <TextView
         android:id="@+id/textView14"
@@ -57,7 +57,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/confirmButton"
+        android:id="@+id/confirmBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="45dp"
